Logout and profile menu added, Login and signup

--- a/home/login.html
+++ b/home/login.html
@@ -115,6 +115,7 @@
         </div>
     </footer>
     <script src="script/script.js"></script>
+    <script src="script/angular.js"></script>
 </body>
 
 </html>
