--- a/home/collabs.html
+++ b/home/collabs.html
@@ -48,9 +48,15 @@
                     <a class="btn" style="background-color: orange; color: white;" href="my-collab.html">Start New
                         Collab</a>
                 </li>
-                <li class="nav-item d-none" id="navbar-profile-img">
-                    <a href="profile.html"><img width="40px" height="40px" class="rounded-circle"
-                            src="images/dev_pic.jpg" alt=""></a>
+                <li class="nav-item d-none dropdown" id="navbar-profile-img">
+                    <a class="btn dropdown-toggle" href="#" role="button" id="navDropDown" data-toggle="dropdown" >
+                        <img width="40px" height="40px" class="rounded-circle"
+                            src="images/dev_pic.jpg" alt="">
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navDropDown">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
