--- a/home/index.html
+++ b/home/index.html
@@ -38,18 +38,49 @@
                 </li>
             </ul>
             <ul class="navbar-nav">
-                <li class="nav-item mr-4" id="navbar-login">
+                <!-- <li class="nav-item mr-4" id="navbar-login">
                     <a class="nav-link" href="login.html">Login</a>
                 </li>
                 <li class="nav-item" id="navbar-register">
                     <a class="btn" href="register.html" style="background-color: orange; color: white;">Sign Up</a>
                 </li>
                 <li class="nav-item mr-4 my-1 d-none" id="navbar-mycollab">
-                    <a class="btn" style="background-color: orange; color: white;" href="my-collab.html">Start New Collab</a>
+                    <a class="btn" style="background-color: orange; color: white;" href="my-collab.html">Start New
+                        Collab</a>
                 </li>
-                <li class="nav-item d-none my-1" id="navbar-profile-img">
+                <li class="nav-item d-none my-1 dropdown" id="navbar-profile-img">
+                    <a class="nav-link dropdown-toggle" href="#" id="navDropDown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <img width="40px" height="40px" class="rounded-circle" src="images/dev_pic.jpg" alt=""
+                            onclick="showLogout()">
+                    </a>
+                    <div class="dropdown-menu bg-dark text-white" aria-labelledby="navDropDown">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#">Logout</a>
+                    </div>
+                </li>
+                <li class="nav-item" id="navbar-profile-image">
                     <a href="profile.html"><img width="40px" height="40px" class="rounded-circle"
                             src="images/dev_pic.jpg" alt=""></a>
+                </li> -->
+                <li class="nav-item mr-4" id="navbar-login">
+                    <a class="nav-link" href="login.html">Login</a>
+                </li>
+                <li class="nav-item" id="navbar-register">
+                    <a class="btn" href="register.html" style="background-color: orange; color: white;">Sign Up</a>
+                </li>
+                <li class="nav-item mr-4 d-none" id="navbar-mycollab">
+                    <a class="btn" style="background-color: orange; color: white;" href="my-collab.html">Start New
+                        Collab</a>
+                </li>
+                <li class="nav-item d-none dropdown" id="navbar-profile-img">
+                    <a class="btn dropdown-toggle" href="#" role="button" id="navDropDown" data-toggle="dropdown" >
+                        <img width="40px" height="40px" class="rounded-circle"
+                            src="images/dev_pic.jpg" alt="">
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navDropDown">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                    </div>
                 </li>
             </ul>
         </div>
