--- a/home/register.html
+++ b/home/register.html
@@ -11,10 +11,11 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
 
 </head>
 
-<body>
+<body ng-app="registerPage">
     <!-- Navigation bar -->
     <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: black;">
         <a class="navbar-brand" href="#">
@@ -56,12 +57,12 @@
                 <p>Register with us today to collaborate with musicians from across the world</p>
                 <div class="col">
                     <center>
-                        <form class="needs-validation" id="register-form" action="#" novalidate>
+                        <form ng-controller="registerFormCtrl" class="needs-validation" id="register-form" action="#" novalidate>
                             <!-- First Name text input field -->
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="text" class="form-control" id="registerFirstName" aria-describedby="FirstName"
-                                        placeholder="First Name" autocomplete="off" required>
+                                        placeholder="First Name" autocomplete="off" ng-model = "user.firstName" required>
                                     <div class="invalid-feedback">First Name cannot be empty</div>
                                 </div>
                             </div>
@@ -70,7 +71,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="text" class="form-control" id="registerLastName" aria-describedby="Last Name"
-                                        placeholder="Last Name" required>
+                                        placeholder="Last Name" ng-model = "user.lastName" required>
                                     <div class="invalid-feedback">Last Name cannot be empty</div>
                                 </div>
                             </div>
@@ -78,7 +79,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="text" class="form-control" id="registerAddressLine" aria-describedby="AddressLine"
-                                        placeholder="Address Line 1" required>
+                                        placeholder="Address Line 1" ng-model = "user.addressLine" required>
                                     <div class="invalid-feedback">Address Line 1 cannot be empty</div>
                                 </div>
                             </div>
@@ -86,7 +87,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="text" class="form-control" id="registerCity" aria-describedby="City"
-                                        placeholder="City" required>
+                                        placeholder="City" ng-model = "user.city" required>
                                     <div class="invalid-feedback">City cannot be empty</div>
                                 </div>
                             </div>
@@ -94,7 +95,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="text" class="form-control" id="registerCountry" aria-describedby="Country"
-                                        placeholder="Country" required>
+                                        placeholder="Country" ng-model = "user.country" required>
                                     <div class="invalid-feedback">Country cannot be empty</div>
                                 </div>
                             </div>
@@ -102,7 +103,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="email" class="form-control" id="registerEmail"
-                                        aria-describedby="Enter a valid email" placeholder="Email" autocomplete="off"
+                                        aria-describedby="Enter a valid email" placeholder="Email" ng-model = "user.email" autocomplete="off"
                                         required pattern="[\w-]+@([\w-]+\.)+[\w-]+">
                                     <div class="invalid-feedback">Invalid Email. Please try again</div>
                                 </div>
@@ -113,7 +114,7 @@
                             <div class="form-row mt-4" style="max-width: 400px;">
                                 <div class="col">
                                     <input type="password" class="form-control" id="registerPassword"
-                                        aria-describedby="Enter a valid email" placeholder="Password" required minlength="7">
+                                        aria-describedby="Enter a valid email" placeholder="Password" ng-model = "user.password" required minlength="7">
                                     <div class="invalid-feedback">Invalid Password. Please try again</div>
                                 </div>
                             </div>
@@ -127,7 +128,7 @@
                                 </div>
                             </div>
                             <p class="mt-4">Already have an account? <a href="login.html">Login here</a></p>
-                            <button class="btn mt-4 text-white" type="button" onclick="registerUser()"
+                            <button class="btn mt-4 text-white" type="button" ng-click="registerUserA()"
                                 style="min-width: 200px; background-color: orange;">Sign Up</button>
                         </form>
                     </center>
@@ -157,6 +158,7 @@
         </div>
     </footer>
     <script src="script/script.js"></script>
+    <script src="script/angular.js"></script>
 </body>
 
 </html>
