--- a/home/about.html
+++ b/home/about.html
@@ -88,7 +88,7 @@
     </div>
 
     <!-- Footer -->
-    <footer class="text-muted bg-dark py-2 mt-2">
+    <footer class="text-muted py-2 mt-2">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 my-2">
