--- a/home/index.html
+++ b/home/index.html
@@ -16,7 +16,7 @@
 
 <body ng-app="indexPage">
     <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-sm navbar-dark fixed-top" style="background-color: black;">
+    <nav class="navbar navbar-expand-sm fixed-top" style="background-color: black;">
         <a class="navbar-brand" href="#">
             <img src="images/logo.png" alt="logo" style="width: 60px; height: 60px;">
         </a>
@@ -211,7 +211,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-muted bg-dark py-2 mt-2">
+    <footer class="text-muted py-2 mt-2">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 my-2">
