Populate User profile

--- a/home/my-collab.html
+++ b/home/my-collab.html
@@ -51,8 +51,8 @@
                             src="images/dev_pic.jpg" alt="">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navDropDown">
-                        <a class="dropdown-item" href="#">Profile</a>
-                        <a class="dropdown-item" href="#" onclick="logout()">Logout</a>
+                        <a class="dropdown-item" href="profile.html">Profile</a>
+                        <a class="dropdown-item" onclick="logout()">Logout</a>
                     </div>
                 </li>
             </ul>
