--- a/home/profile.html
+++ b/home/profile.html
@@ -92,7 +92,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Title : {{collab.title}}</h5>
                         <h5 class="card-title">Aurthor : {{collab.author.firstName}}</h5>
-                        <h5 class="card-title">Genre : Rock</h5>
+                        <h5 class="card-title">Genre : {{collab.genre}}</h5>
                     </div>
                 </div>
             </div>
