--- a/home/my-collab.html
+++ b/home/my-collab.html
@@ -28,7 +28,7 @@
 
         <div class="collapse navbar-collapse" id="NavigationBar">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
                 </li>
                 <li class="nav-item">
