--- a/home/profile.html
+++ b/home/profile.html
@@ -112,7 +112,7 @@
     </div>
 
     <!-- Explore cards -->
-    <div class="container mt-2">
+    <!-- <div class="container mt-2">
         <div class="row">
             <div class="col-md-3 my-1">
                 <div class="card">
@@ -155,7 +155,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     
 
