--- a/home/about.html
+++ b/home/about.html
@@ -51,7 +51,7 @@
                 <li class="nav-item d-none dropdown" id="navbar-profile-img">
                     <a class="btn dropdown-toggle" href="#" role="button" id="navDropDown" data-toggle="dropdown" >
                         <img width="40px" height="40px" class="rounded-circle"
-                            src="images/dev_pic.jpg" alt="">
+                            src="images/profile-placeholder.png" alt="">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navDropDown">
                         <a class="dropdown-item" href="profile.html">Profile</a>
@@ -78,6 +78,7 @@
                         </p>
                         <p class="mt-4">Student Id: 100194487</p>
                         <p class="mt-4">Github email: utsabmalakar57@gmail.com</p>
+                        <a href="https://github.com/NepaliUtsab/Assignment2" target="_blank">View project in github</a>
                     </div>
                     <div class="col-md-5 border border-success mx-1">
                         <img class="img-responsive fit-image" src="images/dev_pic.jpg">
