--- a/home/index.html
+++ b/home/index.html
@@ -51,7 +51,7 @@
                 <li class="nav-item d-none dropdown" id="navbar-profile-img">
                     <a class="btn dropdown-toggle" href="#" role="button" id="navDropDown" data-toggle="dropdown" >
                         <img width="40px" height="40px" class="rounded-circle"
-                            src="images/dev_pic.jpg" alt="">
+                            src="images/profile-placeholder.png" alt="">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navDropDown">
                         <a class="dropdown-item" href="profile.html">Profile</a>
