--- a/home/profile.html
+++ b/home/profile.html
@@ -48,7 +48,7 @@
                 <li class="nav-item dropdown" id="navbar-profile-img">
                     <a class="btn dropdown-toggle" href="#" role="button" id="navDropDown" data-toggle="dropdown" >
                         <img width="40px" height="40px" class="rounded-circle"
-                            src="images/dev_pic.jpg" alt="">
+                            src="images/profile-placeholder.png" alt="">
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navDropDown">
                         <a class="dropdown-item" href="profile.html">Profile</a>
@@ -63,7 +63,7 @@
     <div class="container my-2">
         <div class="row">
             <div class="col text-center">
-                <img src="images/dev_pic.jpg" alt="" style="max-height: 400px;">
+                <img src="images/profile-placeholder.png" alt="" style="max-height: 400px;">
             </div>
             <div class="col my-auto text-lg-left text-center">
                 <h5>Name: {{user.firstName}} {{user.lastName}}</h5>
@@ -104,12 +104,12 @@
     </div>
 
     <!-- My Collaborations -->
-    <div class="container-fluid text-white div-title py-2 mt-4" style="background-color: black;">
+    <!-- <div class="container-fluid text-white div-title py-2 mt-4" style="background-color: black;">
         <div class="container my-2">
             <h4>My Collabs</h4>
         </div>
 
-    </div>
+    </div> -->
 
     <!-- Explore cards -->
     <!-- <div class="container mt-2">
